--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "asyncio>=3.4.3",
     "langchain>=0.2.15",
-    "pypdf>=4.3.1",
+    "pymupdf>=1.24.9",
     "python-dotenv>=1.0.1",
 ]
 
