--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "asyncio>=3.4.3",
+    "langchain-community>=0.2.15",
     "langchain>=0.2.15",
+    "polars>=1.6.0",
     "pymupdf>=1.24.9",
     "python-dotenv>=1.0.1",
 ]
