--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "asyncio>=3.4.3",
     "langchain-community>=0.2.15",
+    "langchain-huggingface>=0.0.3",
     "langchain>=0.2.15",
     "numpy>=1.26.4",
     "pymupdf>=1.24.9",
