--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=1.26.4",
     "pymupdf>=1.24.9",
     "python-dotenv>=1.0.1",
+    "rich>=13.8.0",
     "scikit-learn>=1.5.1",
     "tqdm>=4.66.5",
 ]
