--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "hatchling.build"
 
 [tool.mypy]
 python_version = "3.11"
-disable_error_code = "import-untyped"
+disable_error_code = ["import-untyped", "no-any-return"]
 
 [tool.uv]
 dev-dependencies = [
