--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "rich>=13.8.0",
     "scikit-learn>=1.5.1",
     "tqdm>=4.66.5",
-    "umap>=0.1.1",
+    "umap-learn>=0.5.6",
 ]
 
 [project.scripts]
