--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ build-backend = "hatchling.build"
 [tool.mypy]
 python_version = "3.11"
 disable_error_code = ["import-untyped", "no-any-return"]
+strict = true
+plugins = "numpy.typing.mypy_plugin"
 
 [tool.uv]
 dev-dependencies = [
