--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ python_version = "3.11"
 disable_error_code = ["import-untyped", "no-any-return"]
 strict = true
 plugins = "numpy.typing.mypy_plugin"
+files = "src"
 
 [tool.uv]
 dev-dependencies = [
