--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "asyncio>=3.4.3",
+    "joblib>=1.4.2",
     "langchain-community>=0.2.15",
     "langchain-huggingface>=0.0.3",
     "langchain>=0.2.15",
