--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "rich>=13.8.0",
     "scikit-learn>=1.5.1",
+    "sentence-transformers>=3.0.1",
     "tqdm>=4.66.5",
+    "transformers>=4.44.2",
     "umap-learn>=0.5.6",
 ]
 
