--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-huggingface>=0.0.3",
     "langchain>=0.2.15",
     "numpy>=1.26.4",
+    "ollama>=0.3.3",
     "pymupdf>=1.24.9",
     "python-dotenv>=1.0.1",
     "rich>=13.8.0",
