--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain>=0.2.15",
     "numpy>=1.26.4",
     "ollama>=0.3.3",
+    "prompt-toolkit>=3.0.47",
     "pymupdf>=1.24.9",
     "python-dotenv>=1.0.1",
     "rich>=13.8.0",
