--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 ]
 
 [project.scripts]
-hello = "bookacle:hello"
+bookacle = "bookacle.cli:app"
 
 [build-system]
 requires = ["hatchling"]
