--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,12 @@ dependencies = [
     "dynaconf>=3.2.6",
     "joblib>=1.4.2",
     "langchain-community>=0.2.15",
-    "langchain-huggingface>=0.0.3",
     "langchain>=0.2.15",
     "numpy>=1.26.4",
     "ollama>=0.3.3",
     "prompt-toolkit>=3.0.47",
     "pymupdf4llm>=0.0.16",
     "pymupdf>=1.24.9",
-    "python-dotenv>=1.0.1",
     "rich>=13.8.0",
     "scikit-learn>=1.5.1",
     "sentence-transformers>=3.0.1",
@@ -28,6 +26,17 @@ dependencies = [
 
 [project.scripts]
 bookacle = "bookacle.cli:app"
+
+[project.optional-dependencies]
+docs = [
+    "cairosvg>=2.7.1",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.1",
+    "mkdocs-material>=9.5.39",
+    "mkdocs-section-index>=0.3.9",
+    "mkdocs>=1.6.1",
+    "pillow>=10.4.0",
+]
 
 [build-system]
 requires = ["hatchling"]
