--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ docs = [
     "mkdocs-material>=9.5.39",
     "mkdocs-section-index>=0.3.9",
     "mkdocs>=1.6.1",
+    "mkdocstrings-python>=1.11.1",
     "pillow>=10.4.0",
 ]
 
