Remove overall dependency on Langchain and just depend on langchain-text-splitters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ dependencies = [
     "asyncio>=3.4.3",
     "dynaconf>=3.2.6",
     "joblib>=1.4.2",
-    "langchain-community>=0.2.15",
-    "langchain>=0.2.15",
+    "langchain-text-splitters>=0.3.0",
     "numpy>=1.26.4",
     "ollama>=0.3.3",
     "prompt-toolkit>=3.0.47",
