--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ bookacle = "bookacle.cli:app"
 [project.optional-dependencies]
 docs = [
     "cairosvg>=2.7.1",
+    "markdown-exec[ansi]>=1.9.3",
     "mkdocs-gen-files>=0.5.0",
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-material>=9.5.39",
