--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: bookacle - Book Oracle
-repo_url: https://github.com/MalayAgr/bookacle
+repo_url: https://github.com/MalayAgr/bookacle/
 edit_uri: "blob/master/docs/"
 
 theme:
