--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ docs = [
     "mkdocs-gen-files>=0.5.0",
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-material>=9.5.39",
+    "mkdocs-minify-plugin",
     "mkdocs-section-index>=0.3.9",
     "mkdocs>=1.6.1",
     "mkdocstrings-python>=1.11.1",
