Remove unnecessary css

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: bookacle - Book Oracle
+site_name: "bookacle"
 repo_url: https://github.com/MalayAgr/bookacle/
 edit_uri: "edit/main/"
 copyright: Copyright &copy; 2024 Malay Agarwal
