Simplify documentation for models by putting it in a single place

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,11 +10,7 @@ nav:
   - License: license.md
 - Usage:
   - usage/index.md
-  - Models:
-    - usage/models/index.md
-    - Embedding Models: usage/models/embedding.md
-    - Summarization Models: usage/models/summarization.md
-    - Question-Answering Models: usage/models/qa.md
+  - Models: usage/models.md
   - Document Loaders: usage/loaders.md
   - Text Splitters: usage/splitters.md
   - Tokenizers: usage/tokenizers.md
